--- a/ie-blocker/ie-blocker.css
+++ b/ie-blocker/ie-blocker.css
@@ -7,12 +7,12 @@
     position: fixed;
     top: 0;
     left: 0;
-    box-sizing: content-box;
+    box-sizing: content-box !important;
     z-index: 99999;
 }
 
-.ib-container * {
-    box-sizing: content-box;
+#ib-container * {
+    box-sizing: content-box !important;
 }
 
 .ib-modal {
@@ -148,9 +148,9 @@
 
 .ib-mask {
     background: rgb(0, 0, 0);
-    opacity: 0.7;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
-    filter: alpha(opacity=70);
+    opacity: 0.8;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+    filter: alpha(opacity=80);
     z-index: 99998;
 }
 
