--- a/ie-blocker/ie-blocker.css
+++ b/ie-blocker/ie-blocker.css
@@ -3,7 +3,7 @@
     display: none;
     width: 100%;
     height: 100%;
-    font-family: 'Microsoft Yahei', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     position: fixed;
     top: 0;
     left: 0;
@@ -43,9 +43,9 @@
 }
 
 .ib-header p {
-    margin: 0;
-    margin-top: 10px;
+    margin: 10px 0 0 0;
     font-size: 14px;
+    line-height: 18px;
     text-align: left;
     color: #434a54;
 }
@@ -98,14 +98,16 @@
 }
 
 .ib-browser-name {
-    font-size: 14px;
-    text-align: center;
+    line-height: 18px;
     margin-top: 5px;
+    text-align: center;
+    font-size: 14px;
 }
 
 .ib-browser-description {
     height: 50px;
-    font-size: 10px;
+    line-height: 14px;
+    font-size: 10px; 
     margin-top: 10px;
     padding: 0 5px;
 }
@@ -152,6 +154,10 @@
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
     filter: alpha(opacity=80);
     z-index: 99998;
+}
+
+.zh-cn #ib-container {
+    font-family: 'Microsoft Yahei', sans-serif;
 }
 
 .zh-cn .ib-browser-description {
